--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   .navbar {
     background-color: white;
     width: 100px;
-    height: 100px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
